tests/cases/negative/scope/dupDefs2.lam
-- we attempt to define the function equation
-- multiple times after the type signature

t : Nat
t = zero
t = zero
